v1.5.0
-------------------------------------------------------------------------------- 
 * new "bucket beam" technology to transport buckets across threads without 
   buffer copy. 
 * delaying response start until flush or enough body data has been accumulated.
 * all fixed up to and including 1.4.7
     
v1.4.7
-------------------------------------------------------------------------------- 
 * disabling file mmap handling as this leads to segmentation faults when files
   are truncates while being streamed out. 
 * Some additional trace1 logging when connections give unexpected errors, e.g.
   clients close connection without final GOAWAY frame. 
 
v1.4.6 (as released in Apache httpd 2.4.20)
-------------------------------------------------------------------------------- 
 * incrementing keepalives on each request started so that logging %k gives 
   increasing numbers per master http2 connection. New documented variables 
   in env, usable in custom log formats: H2_PUSH, H2_PUSHED, H2_PUSHED_ON, 
   H2_STREAM_ID and H2_STREAM_TAG.
 * more efficient passing of response bodies with less contention
     and file bucket forwarding.
 * fix for missing score board updates on request count, fix for memory leak 
   on slave connection reuse.
 * disabling PUSH when client sends GOAWAY. Slave connections are reused for 
   several requests, improved performance and better memory use. 
 * fixes problem with wrong lifetime of file buckets on main connection.
 * fixes incorrect denial of requests without :authority header.
 * give control to async mpm for keepalive timeouts only when no streams are 
   open and even if only after 1 sec delay. Under load, event mpm discards 
   connections otherwise too quickly.
 * fixed possible read after free when streams were cancelled early by the 
   client.
 * fixed possible deadlock during connection shutdown. Thanks to @FrankStolle 
   for reporting and getting the necessary data.